--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 * {
     margin: 0;
@@ -7,9 +8,18 @@
 body {
     background-color: #fff6fb;
     font-family: "Montserrat", sans-serif;
+    height: 100vh;
+}
+
+body, html {
+    overflow: hidden;
 }
 
 a {
     text-decoration: none;
     color: inherit;
+}
+
+h1 {
+    font-size: 3vw;
 }
